[package]
name = "http-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = {version = "1.3.0", features = ["v4"]}
log = "0.4"
simple_logger = "3.0.0"

